syntax = "proto3";
import "include/any.proto";
option java_package = "com.roje.game.message.create_room";
option java_multiple_files = true;

message CreateCardRoomRequest{
    int32 type = 1;
    string account = 2;
    google.protobuf.Any config = 3;
}

message CreateCardRoomResponse{
    int32 code = 1;
    string msg = 2;
    google.protobuf.Any responseData = 3;
    string account = 4;
    int32 type = 5;
}

message EntryRoomRequest {
    int64 roomId = 1;
}

message EntryRoomResponse {
    int32 code = 1;
    string msg = 2;
    google.protobuf.Any data = 3;
}

message SitRequest {
    int32 seat = 1;
}

message SitResponse {
    int32 seat = 1;
}

message ChangePosRequest {
    int64 applicantId = 1;
}
